force-app/main/default/objects/breg_WEB_WEB_TRADE_MARKS__c/breg_WEB_WEB_TRADE_MARKS__c.object-meta.xml
<CustomObject>
    <label>WEB TRADE MARKS</label>
    <nameField>
        <label>WEB TRADE MARKS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WEB TRADE MARKSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>