force-app/main/default/objects/breg_WEB_WEB_TRADE_MARKS__c/fields/breg_WEB_Case__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>WEB TRADE MARKS</relationshipLabel>
    <relationshipName>WEB_TRADE_MARKSs</relationshipName>
    <type>Lookup</type>
</CustomField>