force-app/main/default/objects/breg_WEB_WEB_TRADE_MARKS__c/fields/breg_WEB_CERTIFICATE_NO__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_CERTIFICATE_NO__c</fullName>
    <label>CERTIFICATE NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>