force-app/main/default/objects/breg_WEB_WEB_TRADE_MARKS__c/fields/breg_WEB_NOTES__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_NOTES__c</fullName>
    <label>NOTES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>