force-app/main/default/objects/breg_WEB_WEB_TRADE_MARKS__c/fields/breg_WEB_PURPOSE__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_PURPOSE__c</fullName>
    <label>PURPOSE</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>