force-app/main/default/objects/breg_WEB_WEB_TRADE_MARKS__c/fields/breg_WEB_REGISTRATION_DT__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_REGISTRATION_DT__c</fullName>
    <label>REGISTRATION DT</label>
    <type>Date</type>
</CustomField>