force-app/main/default/objects/breg_WEB_WEB_TRADE_MARKS__c/fields/breg_WEB_SIMILAR_NAME__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_SIMILAR_NAME__c</fullName>
    <label>SIMILAR NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>