force-app/main/default/objects/breg_WEB_WEB_TRADE_MARKS__c/fields/breg_WEB_TRADE_MARK_DESC__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_TRADE_MARK_DESC__c</fullName>
    <label>TRADE MARK DESC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>