force-app/main/default/objects/breg_WEB_WEB_TRADE_MARKS__c/fields/breg_WEB_TRADE_MARK_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_TRADE_MARK_ID__c</fullName>
    <externalId>true</externalId>
    <label>TRADE MARK ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>