force-app/main/default/objects/breg_WEB_WEB_TRADE_MARKS__c/fields/breg_WEB_TRADE_NAME__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_TRADE_NAME__c</fullName>
    <label>TRADE NAME</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>