force-app/main/default/objects/breg_WEB_WEB_TRADE_MARKS__c/fields/breg_WEB_TRADE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_TRADE_TYPE__c</fullName>
    <label>TRADE TYPE</label>
    <length>5</length>
    <type>Text</type>
</CustomField>