force-app/main/default/objects/breg_WEB_WEB_TRADE_MARKS__c/fields/breg_WEB_XREF_NAME_1__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_XREF_NAME_1__c</fullName>
    <label>XREF NAME 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>